--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,8 @@ default-run = "harbinger"
 tokio = { version = "1.41.1", features = ["full"] }
 tracing = "0.1.40"
 tracing-subscriber = "0.3.18"
+socket2 = "0.5.7"
+bitflags = "2.6.0"
 
 [dev-dependencies]
 cargo-make = "0.37.23"
